k8s/overlays/dev/operator-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c2-operator
  namespace: c2-system
spec:
  template:
    spec:
      containers:
        - name: c2-operator
          image: c2-operator:dev
          imagePullPolicy: IfNotPresent
