k8s/overlays/dev/service-nodeport-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: c2-grafana
  namespace: c2-system
spec:
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: c2-prometheus
  namespace: c2-system
spec:
  type: NodePort
